# ziex

./: .gitattributes  .gitignore  .gitmodules  .vscodeignore  README.md  build.zig  build.zig.zon  elements.zig  flake.nix  language-configuration.json  package.json  tsconfig.json
.github/: RELEASE.md
bench/: .dockerignore  README.md  compose.yml  oha.sh  realtime.mjs  result.csv  run.sh
pkg/: README.md  check.sh
site/: .gitignore  .vercelignore  Dockerfile  build.zig  build.zig.zon  compose.yml  edge.zig  main.ts  main.zig  meta.zig  package.json  type.d.ts  worker-configuration.d.ts  wrangler.jsonc
src/: App.zig  AppConfig.zig  Attribute.zig  BuiltinAttribute.zig  Component.zig  Element.zig  app.zig  contexts.zig  devtool.zig  extension.ts  (+14 more)
tree-sitter-zx/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  build.zig.zon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-zx/bindings/c/: tree-sitter-zx.pc.in
tree-sitter-zx/bindings/go/: binding.go  binding_test.go
tree-sitter-zx/bindings/node/: index.js
tree-sitter-zx/bindings/python/tests/: test_binding.py
tree-sitter-zx/bindings/python/tree_sitter_zx/: __init__.py  binding.c
tree-sitter-zx/bindings/rust/: build.rs  lib.rs
tree-sitter-zx/bindings/swift/TreeSitterZx/: zx.h
tree-sitter-zx/bindings/swift/TreeSitterZxTests/: TreeSitterZxTests.swift
tree-sitter-zx/bindings/zig/: test.zig
tree-sitter-zx/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
tree-sitter-zx/src/: grammar.json  node-types.json
(+807 files in other folders)
